configure EF and add Employee Table

--- a/EmployeeListRazor/appsettings.json
+++ b/EmployeeListRazor/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=CEN-ISIT-NB01;Database=EmployeeListRazor;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
